[tool.poetry]
name = "hard-brain-bot"
version = "0.1.0"
description = ""
authors = ["Nathan <101812777+corndogit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.25"
disnake = "^2.9.1"
pynacl = "^1.5.0"
black = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
