[tool.poetry]
name = "hard-brain-bot"
version = "0.2.4"
description = ""
authors = ["Nathan <101812777+corndogit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.10,<4.0"
sqlalchemy = "^2.0.25"
disnake = {extras = ["voice"], version="^2.9.1"}
thefuzz = ">=0.22.1"
asyncstdlib = "^3.12.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
